[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "loial"
version = "0.0.2"
authors = [
  { name="Neil Blue", email="neil.the.blue@gmail.com" },
]
description = "A support libray to help implement functions in other languages."
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/neiltheblue/loial"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest_mock"
]